--- a/sass/components_index/_our-work.scss
+++ b/sass/components_index/_our-work.scss
@@ -1,4 +1,9 @@
 .work {
+    display: none;
+    
+        @media screen and (min-width: 1200px) {
+            display: block;
+        }
     padding-bottom: 94px;
 }
 
