--- a/sass/components_general/_contacts.scss
+++ b/sass/components_general/_contacts.scss
@@ -1,9 +1,19 @@
 .contacts {
-    margin-left: auto;
+    // margin-left: auto;
     display: flex;
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+        display: flex;
+        flex-direction:column;
+        margin-left: 96px;
+    }
    
     &__item:not(:last-child) {
             margin-right: 30px;
+
+            @media (min-width: 768px) and (max-width: 1199px) {
+                margin-bottom: 10px;
+            }
         }
     &__icon {
         margin-right: 10px;
@@ -23,12 +33,24 @@
         transition: color 250ms Stiming-function,
             fill 250ms $timing-function;
 
+            @media (min-width: 768px) and (max-width: 1199px) {
+                padding: 0;
+
+            }
+
             &:hover,
             &:focus {
                 color: $logo-button-text-color;
                 fill: $logo-button-text-color;
                 }
     }
+}
+
+ @media (min-width: 1200px) {
+    .contacts {
+        margin-left: 315px;
+    }
+    
 }
 
 @media screen and (max-width: 767px) {
