--- a/sass/components_general/_logo.scss
+++ b/sass/components_general/_logo.scss
@@ -10,6 +10,10 @@
     font-size: 26px;
     line-height: 1.2;
 
+    @media (max-width: 1199px) {
+        justify-content: center;
+    }
+
     &__letters {
             @include logoColor($logo-button-text-color);
         }
