--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -4,9 +4,18 @@
       justify-content: space-between;
       height: 60px;
 
+      @media (min-width: 1200px) {
+          margin: 0 auto;
+      }
+
       @media screen and (min-width: 768px) {
           height: 80px;
         }
+    }
+
+    .navigation {
+      display: flex;
+      align-items: center;
     }
 
 .header {
@@ -72,28 +81,22 @@
 
 .menu-btn {
   display: inline-flex;
+  position: absolute;
+  top: 10px;
+  right: 15px;
   margin: 0;
   padding: 0;
   border: 0;
   background-color: transparent;
   fill: $secondary-text-color;
 
-  &__close {
-    display: none;
-  }
-
-  &.is-open &__close {
-    display: block;
-  }
-
-  &.is-open &__open {
-    display: none;
-  }
-
   &:hover,
   &:focus {
     fill: $logo-button-text-color;
   }
+}
+.menu-btn.menu-btn__close {
+  fill: $logo-button-text-color;
 }
 
 @media screen and (min-width: 768px) {
@@ -105,20 +108,24 @@
 // Mobile menu container
 .menu-container {
   background-color: $primary-background-color;
-  display: none;
-  position: absolute;
-  top: 100%;
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms $timing-function;
 }
 
 .menu-container.is-open {
-  display: block;
-  z-index: 2;
+  transform: translateX(0);
 }
+
 .menu-nav {
 
   margin-bottom: 302px;
@@ -199,6 +206,8 @@
       content: "";
       top: 50%;
       width: 22px;
+      height: 1px;
+      background-color: rgba(33, 33, 33, 0.2);
       border: 1px solid rgba(33, 33, 33, 0.2);
       transform: rotate(90deg);
 
