--- a/sass/components_general/_footer.scss
+++ b/sass/components_general/_footer.scss
@@ -1,189 +1,208 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: $background-color-added;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: $background-color-added;
 
-    &__general {
-            display: flex;
-            align-items: baseline;
-
-            @media (max-width: 767px) {
-                display: block;
-                text-align: center;
-            }
-
-            @media (min-width: 768px) {
-                display: flex;
-                flex-wrap: wrap;
-                padding: 0;
-            }
-        }
-    &__contacts:not(:last-child) {
-        margin-bottom: 9px;
-    }
-    &__details {
-        color: $text-color-footer;
-        display: inline-block;
-        font-style: normal;
-        text-decoration: none;
-        transition: color 250ms $timing-function;
-
-        &:hover,
-        &:focus {
-                color: $added-text-color;
-            }
-    }
-    &__adress {
-        color: $added-text-color;
-        display: inline-block;
-        font-style: normal;
-        text-decoration: none;
-        transition: color 250ms $timing-function;
-
-        &:hover,
-        &:focus {
-                color: $added-text-color;
-            }
-    }
-    &__social {
-
-        // for 1200px
-        // margin-left: 70px;
-
-        @media (max-width: 767px) {
-            display: block;
-            margin-bottom: 60px;
-        }
-
-        @media (min-width: 768px) {
-            margin-left: 165px;
-        }
+  &__general {
+    
+    @media (max-width: 767px) {
+      display: block;
+      text-align: center;
     }
 
+    @media (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+    }
+
+    @media (min-width: 1200px) {
+        flex-wrap: nowrap;
+        align-items: baseline;
+    }
+  }
+  &__contacts:not(:last-child) {
+    margin-bottom: 9px;
+  }
+  &__details {
+    color: $text-color-footer;
+    display: inline-block;
+    font-style: normal;
+    text-decoration: none;
+    transition: color 250ms $timing-function;
+
+    &:hover,
+    &:focus {
+      color: $added-text-color;
+    }
+  }
+  &__adress {
+    color: $added-text-color;
+    display: inline-block;
+    font-style: normal;
+    text-decoration: none;
+    transition: color 250ms $timing-function;
+
+    &:hover,
+    &:focus {
+      color: $added-text-color;
+    }
+  }
+  &__social {
+
+    @media (max-width: 767px) {
+      display: block;
+      margin-bottom: 60px;
+    }
+
+    @media (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
+    }
+  }
 }
 
-@media (max-width:1199px) {
-    .footer__contacts--mobile {
-        margin-bottom: 60px;
-    }
-    .footer__contacts {
-        display: flex;
-        justify-content: center;
-    }
+@media (max-width: 1199px) {
+  .footer__contacts--mobile {
+    margin-bottom: 60px;
+  }
+  .footer__contacts {
+    display: flex;
+    justify-content: center;
+  }
 }
 
-@media (min-width:768px) {
-    .footer__contacts--mobile {
-        margin-left: 76px;
+@media (min-width: 768px) {
+  .footer__contacts--mobile {
+    margin-right: auto;
+    margin-left: auto;
+
+    @media (min-width: 1200px) {
+        margin-left: 0;
     }
+  }
 }
 
-@media (min-width:768px) {
-    .footer__contacts {
-        display: flex;
-        justify-content: center;
+@media (min-width: 768px) {
+  .footer__contacts {
+    display: flex;
+    justify-content: center;
+
+    @media (min-width:1200px) {
+    justify-content: flex-start;
     }
+  }
 }
 
 .footer__title,
 .subscribe__title {
-    display: block;
-    margin-bottom: 20px;
-    color: $added-text-color;
-    font-weight: 700;
-    line-height: 1.14;
-    text-transform: uppercase;
+  display: block;
+  margin-bottom: 20px;
+  color: $added-text-color;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 @media (max-width: 1199px) {
-    .footer__title,
-     .subscribe__title {
-        text-align: center;
-     }
+  .footer__title,
+  .subscribe__title {
+    text-align: center;
+  }
 }
 
-
 .social-icon__footer {
-    background: $background-footer-social;
-    fill: $added-text-color;
+  background: $background-footer-social;
+  fill: $added-text-color;
 
-    &:hover, &:focus {
-        background-color: $logo-button-text-color;
-    }
+  &:hover,
+  &:focus {
+    background-color: $logo-button-text-color;
+  }
 }
 
 /* Subscribe form */
 
 .subscribe {
+  margin-left: auto;
+
+  @media (min-width: 768px) {
     margin-left: auto;
+    margin-right: auto;
+  }
+  @media (min-width: 1200px) {
+    margin-left: auto;
+    margin-right: 0;
+  }
+
+  &_title {
+    margin-bottom: 20px;
+  }
+  &__label {
+    display: block;
+  }
+  &__input {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    font-size: 16px;
+    line-height: 1.25;
+    background-color: $background-color-added;
+    color: $text-color-footer;
 
     @media (min-width: 768px) {
-        margin-left: auto;
-        margin-right: auto;
+      min-width: 450px;
     }
 
-
-    &_title {
-            margin-bottom: 20px;
-        }
-    &__label {
-        display: block;
+    @media (max-width: 1200px) {
+      margin-bottom: 20px;
     }
-    &__input {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-left: 16px;
-        width: 100%;
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-        border-radius: 4px;
-        font-size: 16px;
-        line-height: 1.25;
-        background-color: $background-color-added;
-        color: $text-color-footer;
 
-        @media (min-width:768px) {
-            min-width: 450px;
-        }
-
-        @media (max-width: 1200px){
-            margin-bottom: 20px;
-        }
-
+    @media (min-width: 1200px) {
+        width: 358px;
     }
-    &__btn {
-        position: relative;
-        margin-left: 12px;
-        padding: 10px 62px 10px 28px;
-        background-color: $logo-button-text-color;
-        color: $added-text-color;
-        border-radius: 4px;
-        box-shadow: $shadow-form-button;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        text-align: center;
-        letter-spacing: 0.06em;
-        cursor: pointer;
-        transition: backround-color 250ms $timing-function;
+  }
+  &__btn {
+    position: relative;
+    margin-left: 12px;
+    padding: 10px 62px 10px 28px;
+    background-color: $logo-button-text-color;
+    color: $added-text-color;
+    border-radius: 4px;
+    box-shadow: $shadow-form-button;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    transition: backround-color 250ms $timing-function;
 
-        @media (min-width: 768px) and (max-width: 1199px) {
-            display: flex;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-        &:hover,
-        &:focus {
-                background-color: $active-button-color;
-            }
+    @media (min-width:1200px) {
+        display: inline-block;
     }
-    &__icon {
-        position: absolute;
-        right: 28px;
-        top: 50%;
-        transform: translateY(-50%);
-        margin-left: 10px;
-        fill: $added-text-color;
+
+    &:hover,
+    &:focus {
+      background-color: $active-button-color;
     }
+  }
+  &__icon {
+    position: absolute;
+    right: 28px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 10px;
+    fill: $added-text-color;
+  }
 }
